--- a/Chantrips-mountain.html
+++ b/Chantrips-mountain.html
@@ -43,13 +43,14 @@
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ภูเขา</h2><h3>ภูเขาที่แนะนำมีทั้งหมด 2 ที่ดังนี้</h3>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <a href="#">เขาคิชกูฏ<br>
+            <img src="IMG\เขาคิชฌกูฏ\5.webp"><a href="เขาคิชกูฎ.html">เขาคิชฌกูฏ<br>
             <h2>ภูเขา,เส้นทางธรรมชาติ</h2>
             <p>เป็นสถานที่ประทับของพระสัมมาสัมพุทธเจ้าทรงโปรดพำนักที่สำคัญแห่งหนึ่งในกรุงราชคฤห์ และได้มีเรื่องมหัศจรรย์เกิดขึ้น ณ ที่แห่งนี้</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <a href="#">ผาหมี<br>
-            <h2>ภูเขา,เส้นทางธรรมชาติ</h2></a>
+            <img src="IMG\ผาหินกูบ\1.webp"><a href="ผาหินกูป.html">ผาหินกูบ<br>
+            <h2>ภูเขา,เส้นทางธรรมชาติ</h2>
+            <p>เส้นทางธรรมชาติเดินขึ้นภูเขา มีธรรมชาติอันสวยงานให้นักท่องเที่ยวได้ตกตะลึง</p></a>
         </div>
     </div>
 </section>
@@ -63,8 +64,7 @@
     </div>
     <div class="contact">
         <h2>Contact Info</h2>
-        <h3>Number : 000 111 2222</h3>
-        <h3>Email : Chantrips@mail.com</h3>
+        <h3>Email : chnantrips@gmail.com</h3>
     </div>
 </footer>
 <!----------AOS--------------->
