--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!----------about website----------->
     <section class="about-website">
         <div class="about-website-head fade-in">
-            <h1>"จันทุบรี"</h1>
+            <h1>"จันทบุรี"</h1>
         </div>
         <div class="about-website-img" data-aos="fade-right" data-aos-once="true">
             <img src="IMG\ปก1.webp">
@@ -52,19 +52,19 @@
 <section class="menu-types">
     <h1>รูปแบบของสถานที่ท่องเที่ยว</h1>
     <div class="menu-types-items">
-        <div class="menu-types-item">
+        <div class="menu-types-item" data-aos="fade-up" data-aos-duration="500">
             <a href="Chantrips-waterfall.html">
                 <img src="IMG\logo3.webp">
                 <h2>น้ำตก</h2>
             </a>
         </div>
-        <div class="menu-types-item">
+        <div class="menu-types-item" data-aos="fade-up" data-aos-duration="1000">
             <a href="Chantrips-mountain.html">
                 <img src="IMG\logo2.webp">
                 <h2>ภูเขา</h2>
             </a>
         </div>
-        <div class="menu-types-item">
+        <div class="menu-types-item" data-aos="fade-up" data-aos-duration="1500">
             <a href="Chantrips-sea.html">
                 <img src="IMG\logo4.webp">
                 <h2>ทะเล</h2>
@@ -82,8 +82,7 @@
         </div>
         <div class="contact">
             <h2>Contact Info</h2>
-            <h3>Number : 082 984 8233</h3>
-            <h3>Email : Chantrips@gmail.com</h3>
+            <h3>Email : chnantrips@gmail.com</h3>
         </div>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
