--- a/เขาคิชกูฎ.html
+++ b/เขาคิชกูฎ.html
@@ -71,7 +71,7 @@
     </div>
     <div class="contact">
         <h2>Contact Info</h2>
-        <h3>Email : Chantrips@gmail.com</h3>
+        <h3>Email : chnantrips@gmail.com</h3>
     </div>
 </footer>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
