--- a/Chantrips-temples.html
+++ b/Chantrips-temples.html
@@ -74,8 +74,7 @@
     </div>
     <div class="contact">
         <h2>Contact Info</h2>
-        <h3>Number : 000 111 2222</h3>
-        <h3>Email : Chantrips@mail.com</h3>
+        <h3>Email : chnantrips@gmail.com</h3>
     </div>
 </footer>
 <!----------AOS--------------->
