--- a/Chantrips-ความเป็นมาของเว็บไซต์.html
+++ b/Chantrips-ความเป็นมาของเว็บไซต์.html
@@ -70,8 +70,8 @@
     </div>
     <div class="contact">
         <h2>Contact Info</h2>
-        <h3>Number : 000 111 2222</h3>
-        </div>
+        <h3>Email : chnantrips@gmail.com</h3>
+    </div>
 </footer>
 <!----------AOS--------------->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
