--- a/Chantrips-สถานที่เที่ยว.html
+++ b/Chantrips-สถานที่เที่ยว.html
@@ -43,32 +43,32 @@
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">น้ำตก</h2><h3 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">น้ำตกที่แนะนำมีทั้งหมด 6 ที่ดังนี้</h3>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\น้ำตกพลิ้ว\IMG_0255_(3).webp"><a href="น้ำตกพลิ้ว.html">1.น้ำตกพลิ้ว<br>
+            <img src="IMG\น้ำตกพลิ้ว\IMG_0255_(3).webp"><a href="น้ำตกพลิ้ว.html">น้ำตกพลิ้ว<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
             <p>น้ำตกพลิ้ว น้ำตกทีเป็นหนึ่งในสถานที่ท่องเที่ยวที่ได้รับความนิยมเป็นอันดับต้นๆของจังหวัดจันทบุรี <br>เป็นหนึ่งในสถานที่ที่ผู้เยี่ยมชมจะต้องลองไปสัมผัสสักครั้ง</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\น้ำตกคลองนารายณ์\IMG_1279.webp"><a href="น้ำตกคลองนารายณ์.html">2.น้ำตกคลองนารายณ์<br>
+            <img src="IMG\น้ำตกคลองนารายณ์\IMG_1279.webp"><a href="น้ำตกคลองนารายณ์.html">น้ำตกคลองนารายณ์<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
             <p>น้ำตกคลองนารายณ์ เป็นหนึ่งในน้ำตกในจังหวัดจันทบุรี มีที่เล่นน้ำหลายแอ่งและมีจุดเด่นคือความเป็นส่วนตัว</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\น้ำตกตรอกนอง\IMG_1294.webp"><a href="น้ำตกตรอกนอง.html">3.น้ำตกตรอกนอง<br>
+            <img src="IMG\น้ำตกตรอกนอง\IMG_1294.webp"><a href="น้ำตกตรอกนอง.html">น้ำตกตรอกนอง<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
             <p>น้ำตกตรอกนอง หนึ่งในน้ำตกในจังหวัดจันทบุรีทีมีจุดเด่นคือ ธรรมชาติที่รมเย็น และเป็นหนึ่งในน้ำตกที่มีความเป็นส่วนตัว</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\น้ำตกคลองไพบูลย์\IMG_1223.webp"><a href="น้ำตกคลองไพบูรณ์.html">4.น้ำตกคลองไพบูลย์<br>
+            <img src="IMG\น้ำตกคลองไพบูลย์\IMG_1223.webp"><a href="น้ำตกคลองไพบูรณ์.html">น้ำตกคลองไพบูลย์<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
             <p>น้ำตกคลองไพบูรณ์ เป็นน้ำตกที่มีน้ำให้เล่นทั้งปี มีจุดเด่นคือน้ำที่ใสมีจุดโดดน้ำหลายจุด สามารถเห็นตัวปลาได้ชัดเจน</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\น้ำตกกระทิง\IMG_1228.webp"><a href="น้ำตกกระทิง.html">5.น้ำตกกระทิง<br>
+            <img src="IMG\น้ำตกกระทิง\IMG_1228.webp"><a href="น้ำตกกระทิง.html">น้ำตกกระทิง<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
             <p>หนึ่งในน้ำตกของจังหวัดจันทบุรี มีความเป็นธรรมชาติและความสวยงาน อีกทั้งยังมีน้ำตกหลายชั้นให้นักท่องเที่ยวได้เดินสำรวจตามเส้นทาง</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\น้ำตกเขาสอยดาว\IMG_1036.webp"><a href="น้ำตกเขาสอยดาว.html">6.น้ำตกเขาสอยดาว<br>
+            <img src="IMG\น้ำตกเขาสอยดาว\IMG_1036.webp"><a href="น้ำตกเขาสอยดาว.html">น้ำตกเขาสอยดาว<br>
                 <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
                 <p>หนึ่งในน้ำตกในจังหวัดจันทบุรีที่สูงที่สุดในจังหวัดจันทบุรี และยังเป็นน้ำตกที่ได้ไกล้ชิดกับธรรมชาติมากที่สุดอีกด้วย</p>
             </a>
@@ -80,12 +80,12 @@
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ภูเขา</h2><h3 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ภูเขาที่แนะนำมีทั้งหมด 2 ที่ดังนี้</h3>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\เขาคิชฌกูฏ\5.webp"><a href="เขาคิชกูฎ.html">1.เขาคิชฌกูฏ<br>
+            <img src="IMG\เขาคิชฌกูฏ\5.webp"><a href="เขาคิชกูฎ.html">เขาคิชฌกูฏ<br>
             <h2>ภูเขา,เส้นทางธรรมชาติ</h2>
             <p>เป็นสถานที่ประทับของพระสัมมาสัมพุทธเจ้าทรงโปรดพำนักที่สำคัญแห่งหนึ่งในกรุงราชคฤห์ และได้มีเรื่องมหัศจรรย์เกิดขึ้น ณ ที่แห่งนี้</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\ผาหินกูบ\1.webp"><a href="ผาหินกูป.html">2.ผาหินกูบ<br>
+            <img src="IMG\ผาหินกูบ\1.webp"><a href="ผาหินกูป.html">ผาหินกูบ<br>
             <h2>ภูเขา,เส้นทางธรรมชาติ</h2>
             <p>เส้นทางธรรมชาติเดินขึ้นภูเขา มีธรรมชาติอันสวยงานให้นักท่องเที่ยวได้ตกตะลึง</p></a>
         </div>
@@ -96,37 +96,37 @@
        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ทะเล</h2><h3 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ทะเลที่แนะนำมีทั้งหมด 7 ที่ดังนี้</h3>
         </div>
        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\หาดเจ้าหลาว\IMG_1358.webp"><a href="หาดเจ้าหลาว.html">1.หาดเจ้าหลาว<br>
+            <img src="IMG\หาดเจ้าหลาว\IMG_1358.webp"><a href="หาดเจ้าหลาว.html">หาดเจ้าหลาว<br>
             <h2>ทะเล</h2>
             <p>หาดมีน้ำใสสีฟ้าคราม มีร้านอาหารและที่พักให้บริการมากมายระหว่างทาง</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\หาดแหลมสิงห์\IMG_1364.webp"><a href="หาดแหลมสิงห์.html">2.หาดแหลมสิงห์<br>
+            <img src="IMG\หาดแหลมสิงห์\IMG_1364.webp"><a href="หาดแหลมสิงห์.html">หาดแหลมสิงห์<br>
             <h2>ทะเล</h2>
             <p>หาดแหลมสิงห์ เป็นหาดทรายขาวที่ทอดยาวริมฝั่งทะเล และมีร้านอาหารมากมาย</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\หาดคุ้งวิมาน\IMG_1343.webp"><a href="หาดคุ้งวิมาน.html">3.หาดคุ้งวิมาน<br>
+            <img src="IMG\หาดคุ้งวิมาน\IMG_1343.webp"><a href="หาดคุ้งวิมาน.html">หาดคุ้งวิมาน<br>
             <h2>ทะเล</h2>
             <p>หาดขนาดเล็ก แต่รับรองความสวยงามไม่แพ้ที่อื่นแน่นอน</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\หาดแหลมเสด็จ\IMG_1347.webp"><a href="หาดแหลมเสด็จ.html">4.หาดแหลมเสด็จ<br>
+            <img src="IMG\หาดแหลมเสด็จ\IMG_1347.webp"><a href="หาดแหลมเสด็จ.html">หาดแหลมเสด็จ<br>
             <h2>ทะเล</h2>
             <p>หาดแหลมเสด็จ หาดทรายขาว มีจุดเด่นคือสันเขื่อนกันน้ำที่สามารเดินถ่ายรูปได้ และมีร้านอาหารราคาถูกขายตลอดทาง</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\เนินนางพญา\IMG_0565.webp"><a href="จุดชมวิวเนินนางพญา.html">5.จุดชมวิวเนินนางพญา<br>
+            <img src="IMG\เนินนางพญา\IMG_0565.webp"><a href="จุดชมวิวเนินนางพญา.html">จุดชมวิวเนินนางพญา<br>
             <h2>ทะเล</h2>
             <p>หนึ่งในสถานที่ท่องเที่ยวยอดฮึตของจังหวัดจันทบุรี จุดชมวิวที่มีความสวยงาม และมีมุมถ่ายรูปมากมาย</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\เจดีย์กลางน้ำ\IMG_0560_(2).webp"><a href="เจดีย์กลางน้ำ.html">6.เจดีย์กลางน้ำ<br>
+            <img src="IMG\เจดีย์กลางน้ำ\IMG_0560_(2).webp"><a href="เจดีย์กลางน้ำ.html">เจดีย์กลางน้ำ<br>
             <h2>ทะเล</h2>
             <p>เจดีย์สีขาวที่ตั้งอยู่กลางทะเล มีทางเดินที่ลักษณะคล้ายกับสะพานไม้ มุมถ่ายรูปที่หลากหลาย และสิ่งศักดิ์สิทธิ์ให้กราบไหว้บูชา</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <img src="IMG\สะพานตากสินมหาราช\IMG_0923_(1).webp"><a href="สะพานตากสินมหาราช.html">7.สะพานตากสินมหาราช<br>
+            <img src="IMG\สะพานตากสินมหาราช\IMG_0923_(1).webp"><a href="สะพานตากสินมหาราช.html">สะพานตากสินมหาราช<br>
             <h2>ทะเล</h2>
             <p>สะพานข้ามแยกขนาดใหญ่ เชื่อมต่อระหว่างหาดแหลมสิงห์และอ่าวกระทิง มีลมพัดเย็นและจุดถ่ายรูป</p></a>
         </div>
@@ -179,8 +179,7 @@
     </div>
     <div class="contact">
         <h2>Contact Info</h2>
-        <h3>Number : 000 111 2222</h3>
-        <h3>Email : Chantrips@mail.com</h3>
+        <h3>Email : chnantrips@gmail.com</h3>
     </div>
 </footer>
 <!----------AOS--------------->
