--- a/น้ำตกกระทิง.html
+++ b/น้ำตกกระทิง.html
@@ -67,8 +67,7 @@
     </div>
     <div class="contact">
         <h2>Contact Info</h2>
-        <h3>Number : 082 984 8233</h3>
-        <h3>Email : Chantrips@gmail.com</h3>
+        <h3>Email : chnantrips@gmail.com</h3>
     </div>
 </footer>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
