--- a/น้ำตกกระทิง.html
+++ b/น้ำตกกระทิง.html
@@ -63,7 +63,7 @@
         <h2>ที่อยู่</h2>
     </div>
     <div class="question">
-        <a href="https://forms.gle/wrQuoXFQZxrP2Ntw6" target="_blank">แบบสอบถาม</a>
+        <a href="https://forms.gle/gmJBo1Z2X7nVwkWf6" target="_blank">แบบสอบถาม</a>
     </div>
     <div class="contact">
         <h2>Contact Info</h2>
