--- a/เจดีย์กลางน้ำ.html
+++ b/เจดีย์กลางน้ำ.html
@@ -14,7 +14,7 @@
 <!----------Menu---------->
 <header id="head">
     <div class="logo">
-        <a href="Chantirps-homepage.html">
+        <a href="index.html">
         <img src="IMG\Logo.webp">
         </a>
     </div>
