--- a/เขาคิชกูฎ.html
+++ b/เขาคิชกูฎ.html
@@ -55,7 +55,7 @@
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
         <div class="direction-about" data-aos="fade-right" data-aos-duration="500">
-        <a href="" target="_blank">เส้นทางไปเขาคิชกูฏ</a>
+        <a href="https://www.google.com/maps/dir//วัดพลวง+เขาคิชฌกูฏ+จันทบุรี+Unnamed+Road+49+ม.4+ตำบล+พลวง+อำเภอ+เขาคิชฌกูฏ+จันทบุรี+22210/@12.8074602,102.142182,18z/data=!4m8!4m7!1m0!1m5!1m1!1s0x31049f40bdd6db83:0x7faaef8cdf684961!2m2!1d102.1440602!2d12.8043521?entry=ttu" target="_blank">เส้นทางไปเขาคิชกูฏ</a>
         <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
         <h2 data-aos="fade-right"  data-aos-duration="1500">เวลาทำการ : วันเสาร์ 9:00-16:00<br></h2>
         </div>
